---- Release 2.0.0-beta ----

2008-01-09  Julian Lamb
	* gerbv.c: Make sure we increase max_files by 2, since we may need to
	  open up two files for PNP layers (top + bottom). This fixes a segfault
	  after adding a PNP file to the project and then clicking "New".

2008-01-08  Julian Lamb
	* callbacks.c: Change color dialog to "blocking", which prevents user
	  from modifying layer orders while it is running and preventing
	  possible problems with the layer tree code.

2008-01-07  Julian Lamb
	* interface.c, callbacks.c: Add in warning dialogs if user starts a new
	  project or opens a project with existing layers to make sure they
	  don't accidentally close all layers.
	* callbacks.c: Add in some logic to switch to inches in the rulers if the
	  scale gets too small in mils.  Change the default unit back to mils.
	* interface.c: Recognize the default unit and start the unit combo box
	  to the right one.
	* render.c: Change the default screen size scale factor to where mils
	  can reasonably show up on the rulers.
	* draw.c: Revert back to old oval rendering for the time being, since the
	  new one seems to be having issues...
	* gerbv.c, others: Add a dialog to confirm the user wants to open a file
	  with invalid ASCII characters.
	* pick-and-place.c: Make sure we check cir_seg height and width are > 0,
	  otherwise it can cause cairo rendering problems.
	* draw.c: Reduce label text font size, since the protel-pnp example file
	  reveals problems fitting the text on the image.

2008-01-06  Julian Lamb
	* pick-and-place.c, gerbv.c: Render top and bottom layers in separate
	  layers (if they exist). Rotate parts correctly and fix min/max 
	  calculations so autoscaling works correctly. Also, add "top" and 
	  "bottom" labels to layer names.
	* draw.c, draw-gdk.c, gerb_aperture.h: Add rendering code in preparation
	  for aperture macro reordering.
	* render.c, callbacks.c: Add in watch cursor during rendering to provide
	  feedback to user.